remove bug of nav pointer being visible after compile. Site complete

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -53,6 +53,7 @@
     left: 0;
     z-index: 1500;
 
+    left: -100%;
     opacity: 0;
     width: 0;
     transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
@@ -114,6 +115,7 @@
   &__checkbox:checked ~ &__nav {
     opacity: 1;
     width: 100%;
+    left: 0;
   }
 
   // ICON
