--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,6 +3,9 @@
   padding: 25rem 0;
   margin-top: -20vh;
 
+  @include respond(phone) {
+    margin-top: -15vh;
+  }
   // @include respond(tab-port) {
   //   padding: 20rem 0;
   // }
